--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 </head>
 
 <body>
-    <div class="power">
-        <div>
-            <img src="lap.jpeg" width="380px" min- height="458px" alt="">
+        <div class="image">
+            <img src="images/mum.jpg"width="400" height="416">
+
         </div>
-        <div>
             <form>
-                <div class="container"></div>
-                <h1>Laptop images</h1>
+                <div class="container">
                 <p>Create an account</p>
-                <div class="form-input">
+                <!-- <div class="form-input"> -->
                     <button class="fb">f sign-up with facebook</button> <br>
                     <input type="text" class="input" placeholder=" Email"><br>
                     <input type="Password" class="input" placeholder=" Password" name="password" required><br>
                     <button type="get started" class="btn">Get started</button><br>
-                </div>
+                <!-- </div> -->
+                </div> 
 
                 <p>Already have an account?<a href="login.html">Log in</a></p>
 
